@@ -31,7 +31,7 @@ bind = $mainMod SHIFT, down, resizeactive, 0 100
 bind = $mainMod, G, togglegroup
 
 # Actions
-bind = $mainMod SHIFT, A, exec, ~/dotfiles/hypr/scripts/toggle-animations.sh toggle
+bind = $mainMod SHIFT, A, exec, ~/dotfiles/hypr/scripts/toggle-animations.sh
 bind = $mainMod, PRINT, exec, ~/dotfiles/hypr/scripts/screenshot.sh
 bind = $mainMod CTRL, Q, exec, wlogout
 bind = $mainMod SHIFT, W, exec, ~/dotfiles/hypr/scripts/wallpaper.sh
