@@ -7,7 +7,8 @@ https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.9
 - Waybar Taskbar Module hidden by default. Can be enabled again in the ML4W Settings App
 - Hyprpaper is now the default wallpaper engine. swww can be activiated 
 - Animations can be disabled in the Dotfiles Settings app
-- Animations can be toggled (enabled/disabled) with SUPER + SHIFT + A
+- Animations can be toggled (enabled/disabled) temporarily with SUPER + SHIFT + A
+- Keyboard layout is part of the system information module of waybar
 
 Version 2.8.4
 https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8.4
